# stonp

./: .gitignore  LICENCE  README.md  pyproject.toml
docs/source/: bin_dict.rst  conf.py  index.rst  install.rst  quickstart.rst  requirements.txt  stacked_seds.rst  stacker.rst
filters/: Euclid_NISP_filter_response.json  HSC_filter_response.json  JWST_filter_response.json  PAUS_filter_response.json  SDSS_filter_response.json  test_bands.json
spectra/: blanton2003_sed_templates.json
src/stonp/: __init__.py  stacker.py
test/: test.py
